--- a/profiel.css
+++ b/profiel.css
@@ -1,3 +1,6 @@
+body{
+background-color: whitesmoke;
+}
 .menu{
   height: 100px;
   width: 1536px;
@@ -15,4 +18,60 @@
   height: 330px;
   margin-top: 60px;
   margin-left: 50px;
+}
+#profielbox{
+  width: 900px;
+  border-radius: 10px;
+  height: 330px;
+  margin-left: 500px;
+  margin-top: -334px;
+  background-color: white;
+}
+#naam{
+  position: absolute;
+  width: 500px;
+  height: 60px;
+  left: 820px;
+  top: 194px;
+  background: #F5F5F5;
+  border-radius: 20px;
+}
+#Leeftijd{
+  position: absolute;
+  width: 500px;
+  height: 60px;
+  left: 820px;
+  top: 284px;
+  background: #F5F5F5;
+  border-radius: 20px;
+}
+#E-mail{
+  position: absolute;
+  width: 500px;
+  height: 60px;
+  left: 820px;
+  top: 374px;
+  background: #F5F5F5;
+  border-radius: 20px;
+}
+#naamtext{
+  position: absolute;
+  left: 650px;
+  top: 194px;
+  border-radius: 20px;
+  font-size: 30px;
+}
+#Leeftijdtext{
+  position: absolute;
+  left: 650px;
+  top: 284px;
+  border-radius: 20px;
+  font-size: 30px;
+}
+#E-mailtext{
+  position: absolute;
+  left: 650px;
+  top: 374px;
+  border-radius: 20px;
+  font-size: 30px;
 }
