--- a/profiel.css
+++ b/profiel.css
@@ -91,3 +91,11 @@ background-color: whitesmoke;
   bottom: 30px;
   margin-left: 1400px;
 }
+#loguit{
+  width: 100px;
+  background-color: white;
+  border: none;
+  position: absolute;
+  bottom: 30px;
+  margin-left: 1280px;
+}
