--- a/info.css
+++ b/info.css
@@ -4,9 +4,9 @@ body{
   background-color: whitesmoke;
 }
 .menu{
-  height: 100px;
-  width: 1544px;
+  margin-top: -16px;
   margin-left: -8px;
+  margin-right: -8px;
   background-color: #5450D1;
 }
 .menuFoto{
