--- a/profiel.css
+++ b/profiel.css
@@ -2,10 +2,9 @@ body{
 background-color: whitesmoke;
 }
 .menu{
-  height: 100px;
-  width: 1536px;
-  margin-top: -8px;
+  margin-top: -16px;
   margin-left: -8px;
+  margin-right: -8px;
   background-color: #5450D1;
 }
 .menuFoto{
