--- a/info.css
+++ b/info.css
@@ -4,15 +4,15 @@ body{
   background-color: whitesmoke;
 }
 .menu{
+  height: 99px;
   margin-top: -16px;
   margin-left: -8px;
-  margin-right: -8px;
   background-color: #5450D1;
 }
 .menuFoto{
   height: 90px;
   margin-left: 220px;
-  margin-top: 5px;
+  margin-top: -5px;
 }
 .tekst{
   position: absolute;
