--- a/info.css
+++ b/info.css
@@ -22,7 +22,7 @@ body{
   top: 150px;
   text-align: center;
   font-family: 'Inter';
-  font-style: normal;
+  font-style: italic;
   font-weight: 400;
   font-size: 50px;
   line-height: 61px;
