--- a/schema.css
+++ b/schema.css
@@ -14,3 +14,52 @@ body{
     margin-left: 220px;
     margin-top: -5px;
   }
+
+  /* style.css */
+h1 {
+  color: #333;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+#image1{
+  position: absolute;
+  width: 232px;
+  height: 200px;
+  left: 68px;
+  top: 150px;
+  margin-top: -5px;
+  margin-left: -50px;
+}
+
+
+#image2{
+  position: absolute;
+  width: 232px;
+  height: 200px;
+  left: 80px;
+  top: 150px;
+  margin-top: -5px;
+  margin-left: 320px;
+}
+
+
+#image3{
+  position: absolute;
+  width: 232px;
+  height: 200px;
+  left: 785px;
+  top: 150px;
+  margin-top: -5px;
+ 
+}
+
+#image4{
+  position: absolute;
+  width: 232px;
+  height: 200px;
+  left: 1168px;
+  top: 150px;
+  margin-top: -5px;
+  
+}
