--- a/faq.css
+++ b/faq.css
@@ -35,7 +35,7 @@ body{
 }
 
 .accordion {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   color: rgba(0, 0, 0, 0.8);
   cursor: pointer;
   font-size: 1.2rem;
@@ -56,13 +56,13 @@ body{
 
 .active,
 .accordion:hover {
-  background-color: #f1f7f5;
+  background-color: #ffffff;
 }
 .pannel {
   padding: 0 2rem 2.5rem 2rem;
   background-color: white;
   overflow: hidden;
-  background-color: #f1f7f5;
+  background-color: #ffffff;
   display: none;
 }
 .pannel p {
