--- a/index.css
+++ b/index.css
@@ -1,98 +1,99 @@
-/* CSS code */
-
 body {
-    margin: 0;
-    padding: 0;
-    background-color: whitesmoke;
-  }
-  
-  .menu {
-    height: 100px;
-    width: 1544px;
-    margin-left: -8px;
-    background-color: #5450D1;
-  }
-  
-  .menuFoto {
-    height: 90px;
-    margin-left: 100px;
-    margin-top: 5px;
-  }
-  
-  #image {
-    width: 1536px;
-    height: 450px;
-  }
-  
-  #box1 {
-    position: absolute;
-    width: 300px;
-    height: 350px;
-    left: 100px;
-    top: 330px;
-    background: #5450D1;
-    border-radius: 10px;
-  }
-  
-  #box2 {
-    position: absolute;
-    width: 300px;
-    height: 350px;
-    left: 436px;
-    top: 330px;
-    background: #5450D1;
-    border-radius: 10px;
-  }
-  
-  #box3 {
-    position: absolute;
-    width: 300px;
-    height: 350px;
-    left: 772px;
-    top: 330px;
-    background: #5450D1;
-    border-radius: 10px;
-  }
-  
-  #box4 {
-    position: absolute;
-    width: 300px;
-    height: 350px;
-    left: 1110px;
-    top: 330px;
-    background: #5450D1;
-    border-radius: 10px;
-  }
-  
-  /* Media queries for mobile devices */
-  @media (max-width: 576px) {
+  margin: 0;
+  padding: 0;
+  background-color: whitesmoke;
+}
 
-    .menu {
-      width: 100%;
-      margin-left: 0;
-    }
-    
-    .menuFoto {
-      margin-left: 20px;
-    }
-    
-    #image {
-      width: 414px;
-      height: auto;
-    }
-    
-    #box1,
-    #box2,
-    #box3,
-    #box4 {
-      position: relative;
-      width: 100%;
-      height: 350px;
-      left: auto;
-      top: 0;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-    }
+.menu {
+  height: 100px;
+  width: 1544px;
+  margin-left: -8px;
+  background-color: #5450D1;
+}
+
+.menuFoto {
+  height: 90px;
+  margin-left: 100px;
+  margin-top: 5px;
+}
+
+#image {
+  width: 1536px;
+  height: 670px;
+  margin-top: -120px;
+  background-image: url(img/fitness-senioren-shutterstock_454840033-scaled1234.jpg);
+}
+
+#box1 {
+  position: absolute;
+  width: 300px;
+  height: 350px;
+  left: 100px;
+  top: 330px;
+  background: #5450D1;
+  border-radius: 10px;
+}
+
+#box2 {
+  position: absolute;
+  width: 300px;
+  height: 350px;
+  left: 436px;
+  top: 330px;
+  background: #5450D1;
+  border-radius: 10px;
+}
+
+#box3 {
+  position: absolute;
+  width: 300px;
+  height: 350px;
+  left: 772px;
+  top: 330px;
+  background: #5450D1;
+  border-radius: 10px;
+}
+
+#box4 {
+  position: absolute;
+  width: 300px;
+  height: 350px;
+  left: 1110px;
+  top: 330px;
+  background: #5450D1;
+  border-radius: 10px;
+}
+
+/* Media queries for mobile devices */
+@media (max-width: 576px) {
+  .menu {
+    width: 100%;
+    margin-left: 0;
   }
-  
+
+  .menuFoto {
+    margin-left: 20px;
+    height: 250px;
+    margin-top: 40px;
+  }
+
+  #image {
+    width: 414px;
+    margin-top: 0;
+    height: auto;
+  }
+
+  #box1,
+  #box2,
+  #box3,
+  #box4 {
+    position: relative;
+    width: 80%;
+    height: 350px;
+    left: 40px;
+    top: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+  }
+}
