--- a/info.css
+++ b/info.css
@@ -14,6 +14,18 @@ body{
   margin-left: 220px;
   margin-top: -5px;
 }
+.menuFoto1{
+  height: 90px;
+  margin-left: 230px;
+  margin-top: -5px;
+  
+}
+.menuFoto2{
+  height: 110px;
+  margin-left: 220px;
+  margin-top: -5px;
+  margin-bottom: -10px;
+}
 .tekst{
   position: absolute;
   width: 239px;
@@ -59,8 +71,59 @@ body{
 #image{
   position: absolute;
   width: 632px;
-  height: 200px;
+  height: 379px;
   left: 88px;
   top: 250px;
   margin-top: -5px;
+  background-image: url(img/sport2.jpg);
+}
+@media (max-width: 576px) {
+  .menu {
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .menuFoto1,
+  .menuFoto2,
+  .menuFoto
+   {
+    height: 60px;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: -10px;
+    margin-right: 20px;
+  }
+  .tekst{
+    width: 90%;
+    height: 131px;
+    left: 20px;
+    top: 400px;
+    font-size: 50px;
+    text-align: left;
+  }
+  .tekst1{
+    width: 90%;
+    height: 267px;
+    left: 20px;
+    top: 550px;
+    font-size: 11px;
+    text-align: left;
+  }
+  .tekst2{
+    width: 90%;
+    height: 267px;
+    left: 20px;
+    top: 763px;
+    font-size: 11px;
+    text-align: left;
+  }
+  #image{
+  position: absolute;
+  width: 390px;
+  height: 197px;
+  left: 0px;
+  top: 120px;
+  background: url(img/sportphone.jpg);
+  }
 }
