--- a/profiel.css
+++ b/profiel.css
@@ -12,6 +12,18 @@ background-color: whitesmoke;
   margin-left: 220px;
   margin-top: -5px;
 }
+.menuFoto1{
+  height: 90px;
+  margin-left: 222px;
+  margin-top: -5px;
+  
+}
+.menuFoto2{
+  height: 110px;
+  margin-left: 220px;
+  margin-top: -5px;
+  margin-bottom: -10px;
+}
 #profielFoto img {
   width: 369px;
   height: 330px;
@@ -97,4 +109,113 @@ background-color: whitesmoke;
   position: absolute;
   bottom: 30px;
   margin-left: 1280px;
+}
+@media (max-width: 576px) {
+  .menu {
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .menuFoto1,
+  .menuFoto2,
+  .menuFoto
+   {
+    height: 60px;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: -10px;
+    margin-right: 20px;
+  }
+  #profielFoto img {
+    width: 90%;
+    height: 330px;
+    margin-top: 60px;
+    margin-left: 20px;
+    border-radius: 20px;
+    box-shadow:  5px 5px 10px rgba(0, 0, 0, 0.521);
+  }
+  #profielbox{
+    width: 90%;
+    border-radius: 10px;
+    height: 690px;
+    margin-left: 20px;
+    margin-top: 4px;
+    background-color: white;
+  }
+  #naam{
+    position: absolute;
+    z-index: 1;
+    width: 80%;
+    height: 60px;
+    left: 40px;
+    top: 594px;
+    background: whitesmoke;
+    border-radius: 20px;
+  }
+  #Leeftijd{
+    position: absolute;
+    width: 80%;
+    height: 60px;
+    left: 40px;
+    top: 794px;
+    background: whitesmoke;
+    border-radius: 20px;
+  }
+  #E-mail{
+    position: absolute;
+    width: 80%;
+    height: 60px;
+    left: 40px;
+    top: 994px;
+    background: whitesmoke;
+    border-radius: 20px;
+  }
+  #naamtext{
+    position: absolute;
+    z-index: 5;
+    inline-size: 10px;
+    color: rgb(6, 6, 6);
+    left: 50px;
+    top: 524px;
+    white-space: pre;
+    border-radius: 20px;
+    font-size: 30px;
+    font-family: Arial, sans-serif;
+  }
+  #Leeftijdtext{
+    position: absolute;
+    left: 0px;
+    top: 284px;
+    border-radius: 20px;
+    font-size: 30px;
+    font-family: Arial, sans-serif;
+  }
+  #E-mailtext{
+    position: absolute;
+    left: 0px;
+    top: 374px;
+    border-radius: 20px;
+    font-size: 30px;
+    font-family: Arial, sans-serif;
+  }
+  #bewerken{
+    width: 100px;
+    background-color: white;
+    border: none;
+    position: absolute;
+    left: 40px;
+    top: 1100px;
+    margin-left: -10px;
+  }
+  #loguit{
+    width: 100px;
+    background-color: white;
+    border: none;
+    position: absolute;
+    bottom: 30px;
+    left: 270px;
+    top: 1100px;
+    margin-left: -10px;
+  }
 }
