--- a/info.css
+++ b/info.css
@@ -45,26 +45,27 @@ body{
   width: 594px;
   height: 267px;
   left: 767px;
-  top: 250px;
+  top: 220px;
   text-align: center;
-  font-family: 'Inter';
+  font-family: Lucida Sans;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #000000;
+
 }
 .tekst2{
   position: absolute;
-  width: 594px;
+  width: 580px;
   height: 267px;
   left: 767px;
-  top: 475px;
+  top: 478px;
   text-align: center;
-  font-family: 'Inter';
+  font-family: Lucida Sans;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 24px;
   color: #000000;
 }
