--- a/faq.css
+++ b/faq.css
@@ -23,6 +23,18 @@ body{
   margin-top: -5px;
   margin-bottom: -10px;
 }
+.menuFoto3{
+  margin-left: 220px;
+  margin-top: -5px;
+  height: 95px; 
+  margin-bottom: -2px;
+}
+.menuFoto4{
+  margin-left: 220px;
+  margin-top: -5px;
+  height: 102px; 
+  margin-bottom: -6px;
+}
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 * {
   padding: 0;
@@ -99,6 +111,8 @@ body{
 
   .menuFoto1,
   .menuFoto2,
+  .menuFoto3,
+  .menuFoto4,
   .menuFoto
    {
     height: 60px;
