--- a/bewerken.css
+++ b/bewerken.css
@@ -4,6 +4,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Lucida Sans;
   }
   
   .container {
@@ -12,6 +13,7 @@ html, body {
     background-color: #f2f2f2;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    
   }
   
   h1 {
