--- a/profiel.css
+++ b/profiel.css
@@ -107,12 +107,19 @@ background-color: whitesmoke;
   font-family: Arial, sans-serif;
 }
 #bewerken{
-  width: 100px;
-  background-color: white;
   border: none;
   position: absolute;
   bottom: 30px;
-  margin-left: 1400px;
+  margin-left: 1380px;
+  background-color: #5450D1; 
+  color: white; 
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: Lucida Sans;
 }
 #loguit{
   width: 100px;
@@ -120,7 +127,29 @@ background-color: whitesmoke;
   border: none;
   position: absolute;
   bottom: 30px;
-  margin-left: 1280px;
+  margin-left: 1250px;
+  background-color: #5450D1; 
+  color: white; 
+  border: none; 
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: Lucida Sans;
+}
+.button{
+  background-color: #5450D1; 
+  color: white; 
+  border: none; 
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: Lucida Sans;
 }
 @media (max-width: 576px) {
   .menu {
